upload source code

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-  <link rel="shortcut icon" href="./image/ảnh/photosmile.vn_.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="./image/ảnh/logo.png" type="image/x-icon">
+  <script src="./main.js"></script>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="./image/ảnh/ảnh nền.jpg" alt="Avatar Logo" style="width:40px;" class="rounded-pill">
+        <img src="./image/ảnh/logo.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill">
       </a>
       <ul class="nav">
         <li class="nav-item">
@@ -68,25 +69,25 @@
     <img src="./image/ảnh/ảnh nền.jpg" alt="Ảnh nền">
   </div>
   <div id="skill" class="img">
-    <img src="./image/mẫu/ảnh 4.jpg" alt="Skill">
+    <img src="./image/ảnh/ 4.jpg" alt="Skill">
   </div>
   <div id="skill" class="img">
-    <img src="./image/mẫu/ảnh 5.jpg" alt="Skill">
+    <img src="./image/ảnh/ảnh 5.jpg" alt="Skill">
   </div>
   <div id="skill" class="img">
-    <img src="./image/mẫu/ảnh 6.jpg" alt="Skill">
+    <img src="./image/ảnh/ảnh 6.jpg" alt="Skill">
   </div>
   <div style="background-color: black; text-align: center;" id="contact">
     <h1 style="font-family: Arial, Helvetica, sans-serif; font-weight: bold; color: white;padding: 30px 0px;">CONTACT ME
     </h1>
     <form action="">
-      <div class="form-main" style="display: flex; flex-wrap: wrap; justify-content: center;">
+      <div class="form-main" style="display: flex;width: 40%; margin: 0 auto; flex-wrap: wrap; justify-content: space-evenly;">
         <div class="form-right" style="flex-direction: column; display: flex;">
           <input style="border-radius: 10px;" type="text" placeholder="Your Name">
           <input style="border-radius: 10px;" type="text" placeholder="Your Email">
           <input style="border-radius: 10px;" type="text" placeholder="Your Phone">
         </div>
-        <div style="margin-left: 10px;" class="form-left">
+        <div  class="form-left">
           <input type="text" placeholder="Your Message" style="height: 88px;border-radius: 10px;">
         </div>
       </div>
