upload source code

--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
     </div>
   </div>
   <div id="About" >
-    <div class="img-left">
-      <img src="./image/ảnh/ảnh nền 1.jpg" alt="">
-    </div>
+      <img class="img" src="./image/ảnh/ảnh nền 1.jpg" alt="">
     <ul class="intro">
       <li>
         <div class="icon">
@@ -110,8 +108,16 @@
   </div>
   <div id="nen" class="img" style="position: relative;">
     <img src="./image/ảnh/ảnh nền.jpg" alt="Ảnh nền">
-    <img src="./image/ảnh/tải xuống.jpg" alt="" style="position: absolute; width: 400px;
-    height: 500px; opacity: 65%; top: 30px; right: 20px;">
+    <div class="exp" style="position: absolute; width: 400px; background-color: white;
+    height: 550px; opacity: 65%; top: 100px; right: 100px; padding: 5px 10px; border-radius: 10px;">
+    <h1>Education</h1>
+    <h2>2018-2021: THPT Thạch Bàn</h2>
+    <h2>2021-2022: Cao Đẳng y tế Hà Nội</h2>
+    <h2>2022: FPT Arena Multimedia</h2>
+    <h1>Experience</h1>
+    <h2>2021-2022: Serving SUMO BBQ customers</h2>
+    <h2>2022-2023: Making highland coffee drinks</h2>
+    </div>
   </div>
   <div id="skill" class="img">
     <img src="./image/ảnh/ảnh 4.jpg" alt="Skill">
